Fix: Implement not-found redirection for article/[id] and fix CSS layout issues

--- a/app/components/main.module.css
+++ b/app/components/main.module.css
@@ -1,5 +1,5 @@
 .container {
-	min-height: 100%;
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 }
@@ -9,6 +9,8 @@
 	flex-direction: column;
 	width: 100%;
 	flex-grow: 1;
+	max-width: 1200px;
+	margin: 0 auto;
 }
 
 .sidebar {
@@ -18,14 +20,12 @@
 
 @media screen and (min-width: 960px) {
 	.pageLayout {
-		flex-direction: row;
-		max-width: 1200px;
-		margin: 0 auto;
+		flex-direction: column;
 	}
 	
-.sidebar {
-	width: 250px;
-	flex-shrink: 0;
-	padding: 1rem 0;
-}
+	.sidebar {
+		width: 250px;
+		flex-shrink: 0;
+		padding: 1rem 0;
+	}
 }
